# -oxidized-cell-

./: .gitignore  BUILD_AND_TEST_REPORT.md  Cargo.toml  FIRMWARE_TEST_REPORT.md  KEYS.md  PHASE10_COMPLETION.md  PHASE12_COMPLETION.md  PHASE15_COMPLETION.md  PHASE7_8_9_SUMMARY.md  PS3_FIRMWARE_DETAILED_FINDINGS.md  QUICKSTART.md  README.md  SPU_MFC_CHANNELS_SUMMARY.md  TODO.md  todo.md
.cargo/: config.toml
cpp/: CMakeLists.txt
cpp/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/include/: oc_ffi.h
cpp/src/: atomics.cpp  dma.cpp  ffi.cpp  ppu_jit.cpp  rsx_shaders.cpp  simd_avx.cpp  spu_jit.cpp
crates/oc-audio/: Cargo.toml
crates/oc-audio/src/: cell_audio.rs  lib.rs  mixer.rs  thread.rs
crates/oc-audio/src/backend/: cpal_backend.rs  mod.rs  null.rs
crates/oc-core/: Cargo.toml
crates/oc-core/src/: config.rs  emulator.rs  error.rs  lib.rs  logging.rs  scheduler.rs
crates/oc-debug/: Cargo.toml
crates/oc-debug/src/: breakpoint.rs  disassembler.rs  lib.rs  ppu_debugger.rs  profiler.rs  rsx_debugger.rs  spu_debugger.rs
crates/oc-ffi/: Cargo.toml  build.rs
crates/oc-ffi/src/: atomics.rs  jit.rs  lib.rs  simd.rs  types.rs
crates/oc-hle/: Cargo.toml
crates/oc-hle/src/: cell_adec.rs  cell_audio.rs  cell_dmux.rs  cell_font.rs  cell_font_ft.rs  cell_fs.rs  cell_game.rs  cell_gcm_sys.rs  cell_gif_dec.rs  cell_http.rs  cell_jpg_dec.rs  cell_kb.rs  cell_mic.rs  cell_mouse.rs  cell_net_ctl.rs  cell_pad.rs  cell_png_dec.rs  cell_resc.rs  cell_save_data.rs  cell_spurs.rs  cell_spurs_jq.rs  cell_ssl.rs  cell_sysutil.rs  cell_vdec.rs  cell_vpost.rs  context.rs  lib.rs  libsre.rs  module.rs
crates/oc-input/: Cargo.toml
crates/oc-input/src/: bluetooth.rs  camera.rs  dualshock3.rs  instruments.rs  keyboard.rs  lib.rs  mapping.rs  microphone.rs  mouse.rs  move_controller.rs  pad.rs  usb.rs
crates/oc-integration/: Cargo.toml
crates/oc-integration/src/: lib.rs  loader.rs  pipeline.rs  runner.rs
crates/oc-loader/: Cargo.toml
crates/oc-loader/src/: crypto.rs  elf.rs  firmware.rs  lib.rs  prx.rs  self_file.rs
crates/oc-lv2/: Cargo.toml
crates/oc-lv2/src/: fs.rs  lib.rs  memory.rs  process.rs  prx.rs  spu.rs  syscall.rs  syscall_numbers.rs  thread.rs  time.rs
crates/oc-lv2/src/sync/: cond.rs  event.rs  mod.rs  mutex.rs  rwlock.rs  semaphore.rs
crates/oc-memory/: Cargo.toml
crates/oc-memory/benches/: memory_benchmarks.rs
crates/oc-memory/src/: constants.rs  lib.rs  manager.rs  pages.rs  reservation.rs
crates/oc-memory/tests/: address_space_tests.rs  reservation_tests.rs  stress_tests.rs
crates/oc-ppu/: Cargo.toml
crates/oc-ppu/src/: decoder.rs  interpreter.rs  lib.rs  thread.rs  vmx.rs
crates/oc-ppu/src/instructions/: branch.rs  float.rs  integer.rs  load_store.rs  mod.rs  system.rs  vector.rs
crates/oc-ppu/tests/: test_roms.rs
crates/oc-rsx/: Cargo.toml
crates/oc-rsx/src/: buffer.rs  fifo.rs  lib.rs  methods.rs  postprocess.rs  shader.rs  state.rs  texture.rs  thread.rs  vertex.rs
crates/oc-rsx/src/backend/: mod.rs  null.rs  vulkan.rs
crates/oc-spu/: Cargo.toml
crates/oc-spu/src/: atomics.rs  channels.rs  decoder.rs  interpreter.rs  lib.rs  mfc.rs  thread.rs
crates/oc-spu/src/instructions/: arithmetic.rs  branch.rs  channel.rs  compare.rs  float.rs  logical.rs  memory.rs  mod.rs
crates/oc-spu/tests/: synchronization.rs
crates/oc-ui/: Cargo.toml
crates/oc-ui/src/: app.rs  controller_config.rs  debugger.rs  game_list.rs  lib.rs  memory_viewer.rs  settings.rs  shader_debugger.rs  themes.rs
crates/oc-vfs/: Cargo.toml
crates/oc-vfs/src/: disc.rs  lib.rs  mount.rs  savedata.rs  trophy.rs  users.rs
crates/oc-vfs/src/devices/: bdvd.rs  flash.rs  hdd.rs  mod.rs  usb.rs
crates/oc-vfs/src/formats/: iso.rs  mod.rs  pkg.rs  pup.rs  sfo.rs
docs/: USER_MANUAL.md  advanced-ppu-instructions.md  jit-compilation.md  ppu_instructions.md
examples/: loader_usage.rs  test_iso_loading.rs
scripts/: download-firmware.bat  download-firmware.sh
src/: main.rs
tools/emulator-test/: Cargo.toml
tools/emulator-test/src/: main.rs
tools/pup-analyzer/: Cargo.toml
tools/pup-analyzer/src/: main.rs
