[package]
name = "oc-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Debugging tools for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-memory.workspace = true
oc-ppu.workspace = true
oc-spu.workspace = true
oc-rsx.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
