[package]
name = "oc-input"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Input handling for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
tracing.workspace = true
bitflags.workspace = true

[dev-dependencies]
