[package]
name = "oc-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory management for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
libc.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "memory_benchmarks"
harness = false
