[package]
name = "oc-ppu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PPU (PowerPC) emulation for oxidized-cell PS3 emulator"

[dependencies]
oc-core.workspace = true
oc-memory.workspace = true
tracing.workspace = true
bitflags.workspace = true
bytemuck.workspace = true

[dev-dependencies]
